tests/compile_fail/mix_field_masks_from_different_registers_reverse.cpp
#include "mmio.hpp"
#include "spi_example_registers.hpp"

// Negative test: masks from different registers must never be combined.
// They describe different layouts, so the resulting bit set would have no valid meaning.

int main() {
  auto invalid = SPI_MR::MSTR::MASK | SPI_CR::SPIEN::MASK;
  (void)invalid;
  return 0;
}
